Email template change for Integration

--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/HOTP/EmailTemplates/English/User_AddEmail.html
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/HOTP/EmailTemplates/English/User_AddEmail.html
@@ -279,7 +279,8 @@
 <br/>
                                                        
                                                         <p style="font-family:Arial; font-size:14px; line-height:16.88px; letter-spacing:0.17px; color:#626469;">
-                                                        <a href= "{!url}"> Confirm your new email.</a>
+                                                        <!-- <a href= "{!aurl}"> Confirm your new email.</a> -->
+														<a href= "{!url}" style="cursor: pointer;background: #3DCD58; color: #fff;text-decoration: none;padding: 7px 40px; border-radius: 17px; font-size: 16px; text-align: center;" target="_blank"> Confirm</a>
                                                         </p>
                                                     </td>
                                                 </tr>
@@ -377,7 +378,7 @@
                                             <tbody>
                                                 <tr>
                                                     <td>
-                                                        <p style="font-family:Arial; font-size:10px; line-height:16.88px; letter-spacing:0.17px; color:#626469;">©2018 Schneider Electric Industries SAS. All Rights Reserved.
+                                                        <p style="font-family:Arial; font-size:10px; line-height:16.88px; letter-spacing:0.17px; color:#626469;">©2019 Schneider Electric Industries SAS. All Rights Reserved.
                                                         </p></td>
                                                 </tr>
                                                 <tr> <td height="14" width="100%">
