--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/HOTP/EmailTemplates/Schneider_Electric-Email_Change_Notification_ENGLISH.html
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/HOTP/EmailTemplates/Schneider_Electric-Email_Change_Notification_ENGLISH.html
@@ -207,7 +207,7 @@
                                                                     <div class="img_edit" style="visibility: visible;">
                                                                     </div>
                                                                 </div>
-                                                            </div><a href="http://www.schneider-electric.com/"><img src="https://se--c.na72.content.force.com/servlet/servlet.ImageServer?id=0151H000006TxEo&oid=00DA0000000abSm" width="215" height="47" alt="logo" border="0" style="display:block; border:none; outline:none; text-decoration:none;" class="logo" /></a>
+                                                            </div><a href="http://www.schneider-electric.com/"><img src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005UC4S&oid=00DA0000000abSm" width="215" height="47" alt="logo" border="0" style="display:block; border:none; outline:none; text-decoration:none;" class="logo" /></a>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -233,7 +233,7 @@
                             <tbody>
                                 <!-- Spacing -->
                                 <tr>
-                                    <td height="28" style="background: #3dcd58;" width="618">
+                                    <td height="28" style="background: #3dcd58;" width="100%">
                                     </td>
                                 </tr>
                             </tbody>
@@ -277,6 +277,7 @@
                                                     <td height="20"></td>
                                                 </tr>
                                                 <tr>
+<br/>
                                                     <td>
                                                         <p style="font-family:Arial; font-size:14px; line-height:16.88px; letter-spacing:0.17px; color:#626469;">
                                                             Hello {!User.FirstName},
@@ -380,7 +381,7 @@
                                             <tbody>
                                                 <tr>
                                                     <td>
-                                                        <p style="font-family:Arial; font-size:10px; line-height:16.88px; letter-spacing:0.17px; color:#626469;">©2018 Schneider Electric Industries SAS. All Rights Reserved.
+                                                        <p style="font-family:Arial; font-size:10px; line-height:16.88px; letter-spacing:0.17px; color:#626469;">©2019 Schneider Electric Industries SAS. All Rights Reserved.
                                                         </p></td>
                                                 </tr>
                                                 <tr> <td height="14" width="100%">
