--- a/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/HOTP/EmailTemplates/Chinese/Send_Invitation.HTML
+++ b/idmsc_restapi/schneider-idms-app/src/main/resources/app_root/HOTP/EmailTemplates/Chinese/Send_Invitation.HTML
@@ -367,13 +367,11 @@
                                         <table width="618" cellpadding="0" cellspacing="0" border="0" align="left" class="devicewidth">
                                             <tbody>
               <tr>
-                                                    <td height="40" width="44"><a href="http://tv.schneider-electric.com/"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005UC4R&oid=00DA0000000abSm" alt=""></a></td>
-                                                    <td height="40" width="44"><a href="http://blog.schneider-electric.com/"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005UC4L&oid=00DA0000000abSm" alt=""></a></td>
-                                                    <td height="40" width="44"><a href="http://www.facebook.com/SchneiderElectric"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005UC4M&oid=00DA0000000abSm" alt=""></a></td>
-                                                    <td height="40" width="44"><a href="https://twitter.com/SchneiderElec"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005UC4P&oid=00DA0000000abSm" alt=""></a></td>
-                                                    <td height="40" width="44"><a href="http://www.linkedin.com/company/schneider-electric"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005UC4O&oid=00DA0000000abSm" alt=""></a></td>
-                                                    <td height="40" width="44"><a href="https://plus.google.com/+schneiderelectric"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005UC4N&oid=00DA0000000abSm" alt=""></a></td>
-                                                    <td height="40" width="44"><a href="http://www.youtube.com/schneidercorporate"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005UC4Q&oid=00DA0000000abSm" alt=""></a></td>
+                                                    <td height="40" width="44"><a href="http://weibo.com/schneidercn" title="official Weibo" target="_blank"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005JoNO&amp;oid=00DA0000000abSm" alt=""></a></td>
+                                                    <td height="40" width="44"><a href="http://www.schneider-electric.cn/zh/work/support/wechat/" title="Official WeChat" target="_blank"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005JoNJ&amp;oid=00DA0000000abSm" alt=""></a></td>
+                                                    <td height="40" width="44"><a href="http://i.youku.com/i/UMzU3MDAyMjA0" title="Official Youku" target="_blank"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005JoNT&amp;oid=00DA0000000abSm" alt=""></a></td>
+                                                    <td height="40" width="44"><a href="https://schneiderelectric.tmall.com/?ali_trackid=42_01186a8b291d832f01e9bffaea7fc605" title="Schneider Electric Tmall Flagship Store" target="_blank"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005JoNY&amp;oid=00DA0000000abSm" alt=""></a></td>
+                                                    <td height="40" width="44"><a href="https://mall.jd.com/index-216830.html" title="Schneider Electric Jingdong flagship store" target="_blank"><img height="31" src="https://se.my.salesforce.com/servlet/servlet.ImageServer?id=01512000005JoNd&amp;oid=00DA0000000abSm" alt=""></a></td>
                                                     <td>&nbsp;</td>
                                                 </tr>
                                             </tbody>
@@ -411,7 +409,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>
-                                                        <p style="font-family:Arial; font-size:10px; line-height:16.88px; letter-spacing:0.17px; color:#626469;">© 2016 Schneider Electric Industries SAS. All Rights Reserved.</p></td>
+                                                        <p style="font-family:Arial; font-size:10px; line-height:16.88px; letter-spacing:0.17px; color:#626469;">©2019 Schneider Electric Industries SAS. All Rights Reserved.</p></td>
                                                 </tr>
                                                 <tr> <td width="100%" height="14">
                                                     </td></tr>
